# Amuse

./: .clang-tidy  CMakePresets.json  README.md
examples/: CMakeLists.txt  basic_example.cpp
runtime/: CMakeLists.txt
runtime/core/: CMakeLists.txt
runtime/core/include/: io.hpp  macros.hpp  misc.hpp
runtime/core/include/io/: directory.hpp
runtime/core/include/misc/: types.hpp
runtime/core/src/io/: directory.cpp
